--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                         
                         <div class="progress-con">
                             <p class="prog-text">
-                                Mobile Development (MAUI/Xamarin) and 
-                                ASP.NET Core Blazor and WebAPIs.
+                                Mobile Development (MAUI/Xamarin), 
+                                ASP.NET Core Blazor and WebAPIs, and Unity.
                             </p>
                             <!--
                             <div class="progress">
@@ -148,7 +148,7 @@
                         <p class="prog-title">Java</p>
                         <div class="progress-con">
                             <p class="prog-text">
-                                Android Mobile applications.
+                                Spring Framework & Android Mobile applications.
                             </p>
                         </div>
                     </div>
@@ -381,7 +381,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>Urdu, English</span>
+                                    <span>Urdu (Native), English (B2)</span>
                                 </p>
                             </div>
                         </div>
